# vidgen

./: .env  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
src/vidgen/: __init__.py  cli.py
src/vidgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/vidgen/datasets/: preparation.py
src/vidgen/training/: animatediff_trainer.py  data.py  runner.py
src/vidgen/utils/: __init__.py  env.py
tests/: test_preparation.py
